--- a/.eslintrc
+++ b/.eslintrc
@@ -168,7 +168,7 @@
       "markers": ["=", "!"]           // space here to support sprockets directives
     }],
     // React
-    "jsx-quotes": [2, "prefer-double"],
+    //"jsx-quotes": [2, "prefer-double"],
     "react/display-name": 0,
     "react/jsx-boolean-value": 1,
     "react/jsx-no-undef": 2,
