--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-=======
 # nyc test coverage
 .nyc_output
 
@@ -27,7 +26,6 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-<<<<<<< HEAD
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
@@ -50,3 +48,5 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+.idea
